# coriander

./: .dockerignore  .env  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  build-ir-to-opencl.sh  build.sh  compile-llvm-samplecu.sh  demo-hostside.sh  dev-build-run-demo.sh  dev-deviceside.sh  dev-end-to-end.sh  dev-run-tests.sh  docker-compose.yaml  install  install_distro.py  ir-to-opencl.cpp  kernel.ll  llvm-sample.ll  local_config.h.templ  pytest.ini  run-end-to-end-demo.sh  run-ir-to-opencl-demo.sh  run-ir-to-opencl.sh  run-test-call-cl.sh  run_test_call_cl.sh
.github/: FUNDING.yml  copilot-instructions.md
CudaSharp/: CudaSharp.cs  CudaSharp.csproj  Disasm.cs  Extensions.cs  Gpu.cs  PInvoke.cs  Translator.cs  packages.config
cmake/: cmake_uninstall.cmake.in  cocl.cmake  cocl.cmake.in  cocl_impl.cmake  cocl_vars.cmake.in  get-llvm-cxxflags.sh  get-llvm-libs.sh  get-llvm-link-config.sh  llvm-syslibs.sh
cmake/coriander/: CMakeLists.txt  many_cpp.cpp  many_cu.cu
cmake/coriander/cmake/: cocl.cmake
cmake/coriander/include2/: myinclude2.h
data/: llvm-sample.cu  testcudakernel1.cu  testcudakernel1.ll  testkernel1.cl
demo/: .gitignore  cuda_sample.cu  populate.cu  populate_cpu.cpp  populate_cpu_repeated.cpp  populate_repeated.cu  prng.cu  prng_cpu.cpp  prng_cpu_omp.cpp
doc/: advanced_options.md  advanced_usage.md  assumptions.md  building-tensorflow-notes.md  cmake_usage.md  eigen.md  faq.md  gep.md  how-it-works.md  installation.md  installation_windows_inprogress.md  ll-optimization-options.md  maintainer-info.md  news.md  offsets.md  options.md  plugins.md  python_tests.md  roadmap.md  structs.md  testing.md  walking.md  whats-working.md
docker/: Dockerfile  Dockerfile-1404-nvidia  Dockerfile-beignet  Dockerfile-distro  Dockerfile-nvidia  README.md  docker-unittest.sh  run-test-nvidia.sh
docs/: cmake_usage.md  docker.md  installation.md  installation_windows_inprogress.md  memory.md  news.md  notation.md  options.md  whats-working.md
examples/: test_call_cl.cpp  test_call_host.cpp  testcudakernel1-host.ll  testcudakernel1-host2.ll  testcudakernel1.cl  testcudakernel1.cu  testcudakernel1.ll
include/: __clang_cuda_runtime_wrapper.h  cocl.h  cocl_device.h  cocl_deviceside.h  cocl_host.h  cocl_hostside.h  cuda.h  fake_funcs.h  options.h  vector_types.h
test/: CMakeLists.txt  README.md  conftest.py  cuda_sample.cu  dotdotdot.ll  extract_value.ll  junit-pytest-report.xml  phiaddressspace.cu  pointerpointer.cu  requirements.txt  runtestcontext.sh  struct_initializer.cu  test.sh  test_addressspace.py  test_alloca.py  test_atomic.py  test_branching.py  test_call_cl.cpp  test_cast.py  test_classes.cu  test_classes.py  test_cloutput.py  test_common.py  test_compile.py  test_crashdump.py  test_cwise_add.py  test_dotdotdot.py  test_expression_inlining.py  test_extract_value.py  test_gep.py  test_local.cu  test_local.py  test_maths.ll  test_maths.py  test_memcpy.py  test_memhostalloc.cu  test_options.cpp  test_pointers.py  test_ret.py  test_singlebuffer.py  (+10 more)
test/cmake/: CMakeLists.txt  README.md  many_cc.cc  many_cpp.cpp  requires_define.cu
test/cmake/cmake/: cocl.cmake
test/cmake/include/: many_cpp.h
test/cocl/: byvaluestructwithpointer.cu  context.cu  cuda_sample.cu  longname.cu  multigpu.cu  multithreading.cu  offsetkernelargs.cu  properties.cu  singlebuffer.cu  structs_with_pointers.cu  test_bitcast.cu  test_buffers.cu  test_callbacks.cu  test_char.cu  test_floatstarstar.cu  test_kernelcachedok.cu  test_memhostalloc.cu  test_structs.cu  test_types.cu  testblas.cu  testevents.cu  testevents2.cu  testmath.cu  testmemcpydevicetodevice.cu  testnullpointer.cu  testpartialcopy.cu  testshfl.cu  teststream.cu
test/cocl/callinternal/: main.cu  test_callinternal.cu  test_callinternal.h
test/cocl/multi1/: k1.cu  k2.cu  main.cu
test/cocl/sharedlibrary/: main.cu  mylib.cu  mylib.h
test/eigen/: CMakeLists.txt  LICENSE  README.md  argmax.cu  cxx11_tensor_cuda.cu  generate_deviceside_ll.sh  generate_hostside_ll.sh  reduction.cu  reduction_mean.cu  reduction_prod.cu  reduction_sum.cu  reduction_sum_axisall.cu  reduction_tiny.cu  run-cuda.sh  split_test_helper.h  test_cuda_elementwise.cu  test_cuda_elementwise_abs.cu  test_cuda_elementwise_equal.cu  test_cuda_elementwise_small.cu  test_cuda_nullary.cu  test_equal_int32.cu  test_equal_int64.cu
test/endtoend/: CMakeLists.txt  assert_is_debug.cu  byvaluestructwithpointer.cu  context.cu  cuda_sample  multigpu.cu  multithreading.cu  offsetkernelargs.cu  properties.cu  test_ZeroCudaMalloc.cu  test_callbacks.cu  test_char.cu  test_devices.cu  test_floatstarstar.cu  test_kernelcachedok.cu  test_structs.cu  testblas.cu  testcumemcpy.cu  testevents.cu  testevents2.cu  testfloat4.cu  testmath.cu  testneg.cu  testpartialcopy.cu  testshfl.cu  teststream.cu
test/endtoend/callinternal/: main.cu  test_callinternal.cu  test_callinternal.h
test/endtoend/multi1/: multi1.h
test/endtoend/sharedlibrary/: build.sh
test/gtest/: CMakeLists.txt  GtestGlobals.cpp  GtestGlobals.h  gtest_main.cpp  test_GlobalNames.cpp  test_LocalNames.cpp  test_block_dumper.cpp  test_block_dumper.ll  test_dnn.cpp  test_dnn_act.cpp  test_dnn_conv.cpp  test_dnn_loss.cpp  test_dnn_pooling.cpp  test_expressions_helper.cpp  test_function_dumper.cpp  test_function_dumper.ll  test_global_constants.cpp  test_global_constants.ll  test_hostside_opencl_funcs.cpp  test_instructiondumper.cpp  test_kernel_dumper.cpp  test_kernel_dumper.ll  test_logging.cpp  test_new_instruction_dumper.cpp  test_shims.cpp  test_struct_cloner.cpp  test_struct_cloner.ll  test_type_dumper.cpp  test_type_dumper.ll  testwalk.ll
test/tf/: eigen_argmax.cl  eigen_argmax_hacked.cl  patch_random.sh  random_op_gpu-device-noopt.ll  random_op_gpu-device.ll  random_op_gpu-hostpatched.ll  random_op_gpu-hostraw.ll  softmax_op_gpu-device-noopt.ll  softmax_op_gpu-hostraw.ll  split_lib_gpu-device-noopt.ll  split_lib_gpu-device.ll  split_lib_gpu-hostpatched.ll  split_lib_gpu-hostraw.ll  test_tf.py
test/tf/samples/: LICENSE  cwise_op_gpu_sqrt-device-noopt.ll
(+194 files in other folders)
